--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
     <title>{{ page.title }} &mdash; {{ site.title }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{{ page.description }}">
+    <meta property="og:image"
+          content="http://atstp.github.io/annotater/annotater.svg" />
 
     <link rel="stylesheet" href="{{ site.baseurl }}/other.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/site.css">
